--- a/hw/ans4.ipynb
+++ b/hw/ans4.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ans4.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rgerkin/PythonDataScienceHandbook/blob/master/notebooks/data/ans4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "MRiM3uK2kKnN",
@@ -45,11 +34,11 @@
       "metadata": {
         "id": "_IeJP_8mkQUr",
         "colab_type": "code",
+        "outputId": "e90cbaa0-1085-4d84-efc5-938bd13b4451",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 545
-        },
-        "outputId": "202d83eb-214e-4206-a917-8f65fb047ba0"
+          "height": 551
+        }
       },
       "cell_type": "code",
       "source": [
@@ -64,7 +53,7 @@
         "\n",
         "df.head(15)"
       ],
-      "execution_count": 16,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 2
         }
       ]
     },
@@ -212,17 +201,17 @@
       "metadata": {
         "id": "mDi2i2cIkwLs",
         "colab_type": "code",
+        "outputId": "05978bfd-1c78-419d-c067-f82cefa2e39d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 370
-        },
-        "outputId": "05978bfd-1c78-419d-c067-f82cefa2e39d"
+        }
       },
       "cell_type": "code",
       "source": [
         "df.plot.scatter(x='x',y='y');"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -242,20 +231,20 @@
       "metadata": {
         "id": "8KWifia0lEvf",
         "colab_type": "code",
+        "outputId": "79cd847b-248a-413a-8cdf-afacc2c6182c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 421
-        },
-        "outputId": "c4f4e8eb-9d2f-4344-c6b8-375004b36bc2"
+          "height": 426
+        }
       },
       "cell_type": "code",
       "source": [
         "# Enter your group number here:\n",
-        "group = '' # Enter I, II, III, or IV\n",
+        "group = 'III' # Enter I, II, III, or IV\n",
         "\n",
         "df.loc[group]"
       ],
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,57 +281,57 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>10.0</td>\n",
-              "      <td>8.04</td>\n",
+              "      <td>7.46</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>8.0</td>\n",
-              "      <td>6.95</td>\n",
+              "      <td>6.77</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>13.0</td>\n",
-              "      <td>7.58</td>\n",
+              "      <td>12.74</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>9.0</td>\n",
-              "      <td>8.81</td>\n",
+              "      <td>7.11</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>11.0</td>\n",
-              "      <td>8.33</td>\n",
+              "      <td>7.81</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>14.0</td>\n",
-              "      <td>9.96</td>\n",
+              "      <td>8.84</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>6.0</td>\n",
-              "      <td>7.24</td>\n",
+              "      <td>6.08</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>4.0</td>\n",
-              "      <td>4.26</td>\n",
+              "      <td>5.39</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
               "      <td>12.0</td>\n",
-              "      <td>10.84</td>\n",
+              "      <td>8.15</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>7.0</td>\n",
-              "      <td>4.82</td>\n",
+              "      <td>6.42</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
               "      <td>5.0</td>\n",
-              "      <td>5.68</td>\n",
+              "      <td>5.73</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -351,23 +340,23 @@
             "text/plain": [
               "       x      y\n",
               "id             \n",
-              "0   10.0   8.04\n",
-              "1    8.0   6.95\n",
-              "2   13.0   7.58\n",
-              "3    9.0   8.81\n",
-              "4   11.0   8.33\n",
-              "5   14.0   9.96\n",
-              "6    6.0   7.24\n",
-              "7    4.0   4.26\n",
-              "8   12.0  10.84\n",
-              "9    7.0   4.82\n",
-              "10   5.0   5.68"
+              "0   10.0   7.46\n",
+              "1    8.0   6.77\n",
+              "2   13.0  12.74\n",
+              "3    9.0   7.11\n",
+              "4   11.0   7.81\n",
+              "5   14.0   8.84\n",
+              "6    6.0   6.08\n",
+              "7    4.0   5.39\n",
+              "8   12.0   8.15\n",
+              "9    7.0   6.42\n",
+              "10   5.0   5.73"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 3
         }
       ]
     },
@@ -375,17 +364,17 @@
       "metadata": {
         "id": "DGu0O_n9lc9d",
         "colab_type": "code",
+        "outputId": "83e46adf-648d-4eaa-ebee-c0c9db55425f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "e29b6bfb-5ca7-4bbe-89a5-97d32c69cee4"
+          "height": 72
+        }
       },
       "cell_type": "code",
       "source": [
         "df.loc[group].mean().round(2)"
       ],
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,13 +388,120 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 4
         }
       ]
     },
     {
       "metadata": {
         "id": "q3sCvKMTmNtS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        },
+        "outputId": "b70ebd63-46f6-41ee-c0a0-b5067f818848"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Homework\n",
+        "df.loc[group].describe().round(2)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>x</th>\n",
+              "      <th>y</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>11.00</td>\n",
+              "      <td>11.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>9.00</td>\n",
+              "      <td>7.50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>3.32</td>\n",
+              "      <td>2.03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>4.00</td>\n",
+              "      <td>5.39</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>6.50</td>\n",
+              "      <td>6.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>9.00</td>\n",
+              "      <td>7.11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>11.50</td>\n",
+              "      <td>7.98</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>14.00</td>\n",
+              "      <td>12.74</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           x      y\n",
+              "count  11.00  11.00\n",
+              "mean    9.00   7.50\n",
+              "std     3.32   2.03\n",
+              "min     4.00   5.39\n",
+              "25%     6.50   6.25\n",
+              "50%     9.00   7.11\n",
+              "75%    11.50   7.98\n",
+              "max    14.00  12.74"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KDQy_d6lY5zR",
         "colab_type": "code",
         "colab": {}
       },
